src/test/deca/context/invalid/objets/04ChangeSignature.deca
// This test should not work as we cannot redefine a method whith an other signature

class A {
    int x;

    int getX() {
        return x;
    }
}

class B extends A {

    float getX() {
        return 12.3;
    }
}